--- a/src/System.IO.Pipelines/dir.props
+++ b/src/System.IO.Pipelines/dir.props
@@ -3,6 +3,7 @@
   <Import Project="..\dir.props" />
   <PropertyGroup>
     <AssemblyVersion>4.0.0.1</AssemblyVersion>
+    <PackageVersion>4.5.2</PackageVersion>
     <AssemblyKey>Open</AssemblyKey>
   </PropertyGroup>
 </Project>
