--- a/src/System.Net.Http.WinHttpHandler/dir.props
+++ b/src/System.Net.Http.WinHttpHandler/dir.props
@@ -3,6 +3,7 @@
   <Import Project="..\dir.props" />
   <PropertyGroup>
     <AssemblyVersion>4.0.3.1</AssemblyVersion>
+    <PackageVersion>4.5.1</PackageVersion>
     <AssemblyKey>MSFT</AssemblyKey>
   </PropertyGroup>
 </Project>
