Delete moved files, port cleanup from CoreCLR and CoreRT

--- a/src/Microsoft.Win32.Registry/src/Microsoft.Win32.Registry.csproj
+++ b/src/Microsoft.Win32.Registry/src/Microsoft.Win32.Registry.csproj
@@ -25,18 +25,25 @@
       <Link>Common\CoreLib\Microsoft\Win32\RegistryHive.cs</Link>
     </Compile>
     <Compile Include="$(CommonPath)\CoreLib\Microsoft\Win32\RegistryValueKind.cs">
-      <Link>Common\CoreLib\Microsoft\Win32\RegistryValueKind.cs"</Link>
+      <Link>Common\CoreLib\Microsoft\Win32\RegistryValueKind.cs</Link>
     </Compile>
     <Compile Include="$(CommonPath)\CoreLib\Microsoft\Win32\SafeHandles\SafeRegistryHandle.cs">
       <Link>Common\CoreLib\Microsoft\Win32\SafeHandles\SafeRegistryHandle.cs</Link>
     </Compile>
     <Compile Include="Microsoft\Win32\RegistryKey.cs" />
     <Compile Include="Microsoft\Win32\RegistryKeyPermissionCheck.cs" />
-    <Compile Include="Microsoft\Win32\RegistryOptions.cs" />
-    <Compile Include="Microsoft\Win32\RegistryValueOptions.cs" />
-    <Compile Include="Microsoft\Win32\RegistryView.cs" />
-    <Compile Include="Microsoft\Win32\ThrowHelper.cs" />
-    <Compile Include="System\Security\AccessControl\RegistryRights.cs" />
+    <Compile Include="$(CommonPath)\CoreLib\Microsoft\Win32\RegistryOptions.cs">
+      <Link>Common\CoreLib\Microsoft\Win32\RegistryOptions.cs</Link>
+    </Compile>
+    <Compile Include="$(CommonPath)\CoreLib\Microsoft\Win32\RegistryValueOptions.cs">
+      <Link>Common\CoreLib\Microsoft\Win32\RegistryValueOptions.cs</Link>
+    </Compile>
+    <Compile Include="$(CommonPath)\CoreLib\Microsoft\Win32\RegistryView.cs">
+      <Link>Common\CoreLib\Microsoft\Win32\RegistryView.cs</Link>
+    </Compile>
+    <Compile Include="$(CommonPath)\CoreLib\System\Security\AccessControl\RegistryRights.cs">
+      <Link>Common\CoreLib\System\Security\AccessControl\RegistryRights.cs</Link>
+    </Compile>
     <Compile Include="System\Security\AccessControl\RegistrySecurity.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetsNetFx)' != 'true' AND '$(TargetsWindows)' == 'true'">
@@ -47,7 +54,7 @@
       <Link>Common\Interop\Windows\Interop.Errors.cs</Link>
     </Compile>
     <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\Kernel32\Interop.FormatMessage.cs">
-      <Link>Common\Corelib\Interop\Windows\Interop.FormatMessage.cs</Link>
+      <Link>Common\CoreLib\Interop\Windows\Interop.FormatMessage.cs</Link>
     </Compile>
     <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegCloseKey.cs">
       <Link>Common\CoreLib\Interop\Windows\Interop.RegCloseKey.cs</Link>
@@ -55,35 +62,35 @@
     <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegConnectRegistry.cs">
       <Link>Common\Interop\Windows\Interop.RegConnectRegistry.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegCreateKeyEx.cs">
-      <Link>Common\Interop\Windows\Interop.RegCreateKeyEx.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegCreateKeyEx.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegCreateKeyEx.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegDeleteKeyEx.cs">
-      <Link>Common\Interop\Windows\Interop.RegDeleteKeyEx.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegDeleteKeyEx.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegDeleteKeyEx.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegDeleteValue.cs">
-      <Link>Common\Interop\Windows\Interop.RegDeleteValue.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegDeleteValue.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegDeleteValue.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegEnumKeyEx.cs">
-      <Link>Common\Interop\Windows\Interop.RegEnumKeyEx.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegEnumKeyEx.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegEnumKeyEx.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegEnumValue.cs">
-      <Link>Common\Interop\Windows\Interop.RegEnumValue.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegEnumValue.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegEnumValue.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegFlushKey.cs">
-      <Link>Common\Interop\Windows\Interop.RegFlushKey.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegFlushKey.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegFlushKey.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegOpenKeyEx.cs">
-      <Link>Common\Interop\Windows\Interop.RegOpenKeyEx.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegOpenKeyEx.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegOpenKeyEx.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegQueryInfoKey.cs">
-      <Link>Common\Interop\Windows\Interop.RegQueryInfoKey.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegQueryInfoKey.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegQueryInfoKey.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegQueryValueEx.cs">
-      <Link>Common\Interop\Windows\Interop.RegQueryValueEx.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegQueryValueEx.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegQueryValueEx.cs</Link>
     </Compile>
-    <Compile Include="$(CommonPath)\Interop\Windows\advapi32\Interop.RegSetValueEx.cs">
-      <Link>Common\Interop\Windows\Interop.RegSetValueEx.cs</Link>
+    <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\advapi32\Interop.RegSetValueEx.cs">
+      <Link>Common\CoreLib\Interop\Windows\Interop.RegSetValueEx.cs</Link>
     </Compile>
     <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\Interop.BOOL.cs">
       <Link>Common\CoreLib\Interop\Windows\Interop.BOOL.cs</Link>
