Fix windows auth when we receive a 401 after auth completes
PR #31589 introduced a regression in the case where we receive another 401 after Windows auth completes
(this is caused by the user being successfully authenticated, but not authorized to access the specified
resource). We were incorrectly draining the response in this case. As a result, the user would receive
a disposed response and eventually throw an ObjectDisposedException.

The fix is to adjust the logic here where we only drain if we know we are going to send another request
for the rest of the Windows auth (Negotiate/NTLM) challenge-response handshake.

Add new unit test for Windows auth scenario.

--- a/src/System.Net.Http/tests/FunctionalTests/System.Net.Http.Functional.Tests.csproj
+++ b/src/System.Net.Http/tests/FunctionalTests/System.Net.Http.Functional.Tests.csproj
@@ -132,6 +132,7 @@
     <Compile Include="HttpClientHandlerTest.Decompression.cs" />
     <Compile Include="HttpClientTest.netcoreapp.cs" />
     <Compile Include="HttpMethodTest.netcoreapp.cs" />
+    <Compile Include="NtAuthTests.cs" />
     <Compile Include="ReadOnlyMemoryContentTest.cs" />
     <Compile Include="SocketsHttpHandlerTest.cs" />
   </ItemGroup>
